# trapping-method

./: .gitignore  ARC_SETUP.md  README.md  pyproject.toml
configs/: default.yaml  immunize_4p5b_lill100.yaml  immunize_4p5b_lill10k.yaml  immunize_4p5b_paperexact.yaml  immunize_cn.yaml  immunize_multiop.yaml  immunize_multiop_v2.yaml  immunize_multiop_v3.yaml  immunize_multiop_v4.yaml  immunize_multiop_v4a.yaml  immunize_multiop_v5a_dro.yaml  immunize_multiop_v5b_peft_family.yaml  immunize_multiop_v6_taylor_hvp.yaml  immunize_repli_A1_kinv_off.yaml  immunize_repli_A2_kinv_ridge1e-6.yaml  immunize_repli_A3_iter375.yaml  immunize_repli_A4_lr1e-3.yaml  immunize_repli_B1_kinvoff_lill2e7.yaml  immunize_repli_B2_kinvoff_lill2e8.yaml  immunize_repli_B3_kinvoff_iter10k.yaml  immunize_repli_B4_kinvoff_lwell5e-3.yaml  immunize_repli_C1_paperexact_notrap.yaml  immunize_repli_C2_lill100_notrap.yaml  immunize_repli_D1_K_no_B.yaml  immunize_repli_D2_no_detach.yaml  immunize_trap.yaml  immunize_trap_paper_faithful.yaml  immunize_v10a_population_bonly.yaml  immunize_v12a_tangent_removal.yaml  immunize_v7.yaml  immunize_v8a_bonly.yaml  immunize_v9a_persistent_bonly.yaml
experiments/: REGISTRY.md  run_adversary.py  run_baseline_probe.py  run_immunization_cn.py  run_immunization_v10_population.py  run_immunization_v12_tangent_removal.py  run_immunization_v7.py  run_immunization_v9_persistent.py  run_learned_tangent_probe.py  run_rfd.py  run_tangent_accessibility.py  run_v9_attacker_diagnostic.py  smoke_test_stage2.py
research/: README.md  REPLICATION_SUMMARY.md  empirical_state.md
(+169 files in other folders)
